change bulk registration gui

--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -91,16 +91,16 @@
 
     <div class="mb-3">
         <h4>
-            Einwilligung erteilen
+            Einverständnis manuell erklären
         </h4>
         <p>
             Du kannst die Einverständniserklärungen für Deine Schüler auch in Papierform von den Eltern erhalten. Sobald Du alle Einverständniserklärungen erhalten
-            hast, kannst Du hier im Namen deines Kurses die Einwilligung erteilen. 
+            hast, kannst Du hier im Namen deiner Klasse das Einverständnis manuell erklären. 
         </p> 
         
-            <button data-class="{{class._id}}" class="btn btn-primary btn-skip-consent">
-                        <i class="fa fa-exclamation-triangle"></i> Einwilligung für alle Schüler erteilen
-            </button>
+            <a href="skipregistration" class="btn btn-primary btn-skip-consent">
+                        <i class="fa fa-exclamation-triangle"></i> Einverständnis manuell für alle Schüler erklren
+            </a>
         
         
     </div>
