--- a/views/administration/users_registrationcomplete.hbs
+++ b/views/administration/users_registrationcomplete.hbs
@@ -35,12 +35,18 @@
 </style>
 <div class="row">
     <div class="col-xl-6">
-        <p class="noprint">Mit den folgenden Daten kann sich nun an der {{@root.theme.short_title}} angemeldet werden. </p>
+        <p class="noprint">
+            Mit den folgenden Daten kann sich nun an der {{@root.theme.short_title}} angemeldet werden. <br>
+        </p>
+        <p class="noprint">
+            <b>Achtung: </b>Du kannst diese Seite nicht erneut aufrufen. Drucke dir also die angezeigten Zugansdaten unbedingt aus oder speichere sie anderweitig. 
+            Sollte ein Schüler sein Passwort vergessen, kannst du es nur in der Benutzerverwaltung ändern. 
+        </p>
         {{#unless single}}
         <div class="printonly">
             <p>Auf dieser Seite findest du eine Übersicht über alle erfolgten Einwilligungen und generierten Zugangsdaten. <br>
             Die folgenden Seiten dieses Dokuments beinhalten jeweils die Zugangsdaten eines Kindes und eine Anleitung zur ersten Anmeldung. </p>
-            <table>
+            <table class="table">
                 <tr>
                     <th>Name</th>
                     <th>E-Mail</th>
@@ -74,7 +80,7 @@
         E-Mail: {{email}} 
         Passwort: {{password}}</textarea>
         {{/each}}
-        <p class="noprint">Beim ersten Login muss ein neues Passwort gewählt werden. Schüler, die mindestens 14 Jahre
+        <p class="noprint" style="margin-top: 1em">Beim ersten Login muss ein neues Passwort gewählt werden. Schüler, die mindestens 14 Jahre
             alt sind, müssen
             beim ersten Login die Einwilligungserklärung zusätzlich selbst bestätigen. </p>
     </div>
