fix about images height for safari

--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -297,8 +297,8 @@
                         <div class="single-award-wrapper">
                             <a href="https://www.innovationspreis.de/preisträger-und-finalisten/preisträger/2018/" target="_blank">
 								<div class="row">
-									<b class="single-award-title col-md-6">Preisträger im "Innovationspreis Berlin Brandenburg 2018"</b>
-									<img class="single-award-thumbnail col-md-6" src="/images/awards/Innovationspreisträger-180208.jpg" />
+                                    <div class="col-md-6"><b class="single-award-title">Preisträger im "Innovationspreis Berlin Brandenburg 2018"</b></div>
+                                    <div class="col-md-6"><img class="single-award-thumbnail" src="/images/awards/Innovationspreisträger-180208.jpg" /></div>
 								</div>
                             </a>
                         </div>
@@ -307,8 +307,8 @@
                         <div class="single-award-wrapper">
                             <a href="https://hpi.de/pressemitteilungen/2017/schul-cloud-als-ausgezeichneter-ort-2017-praemiert.html" target="_blank">
 								<div class="row">
-									<b class="single-award-title col-md-6">Ernennung zum „Ausgezeichneten Ort“ im bundesweiten Wettbewerb „Land der Ideen“</b>
-									<img class="single-award-thumbnail col-md-6" src="/images/awards/Land-der-Ideen-2017.jpg" />
+                                    <div class="col-md-6"><b class="single-award-title">Ernennung zum „Ausgezeichneten Ort“ im bundesweiten Wettbewerb „Land der Ideen“</b></div>
+                                    <div class="col-md-6"><img class="single-award-thumbnail" src="/images/awards/Land-der-Ideen-2017.jpg" /></div>
 								</div>
                             </a>
                         </div>
