--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -99,7 +99,7 @@
         </p> 
         
             <a href="skipregistration" class="btn btn-primary btn-skip-consent">
-                        <i class="fa fa-exclamation-triangle"></i> Einverständnis manuell für alle Schüler erklren
+                        <i class="fa fa-exclamation-triangle"></i> Einverständnis manuell für alle Schüler erklären
             </a>
         
         
