changed the headline font und sizes according to new design system

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -212,6 +212,9 @@
       .course-features {
         margin-top: 15px;
       }
+      .sub-text {
+          font-size: $font-size-xs;
+      }
     }
     .course-submit-page {
       max-width: 75%;
