--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -99,10 +99,10 @@
           <img src="/images/empty-states/topics.svg" alt="Leeres Thema" class="image topic-image"/>
           {{#userHasPermission "COURSE_EDIT"}}
             <h4>Erstelle das erste Thema in deinem Kurs</h4>
-            <h6 class="sub-title">
+            <p class="text-muted">
               Füge Texte, Bilder, Videos und andere Materialien zu einem Thema hinzu.
               Ein Thema umfasst eine Unterrichtseinheit oder -stunde innerhalb deines Kurses.
-            </h6>
+            </p>
           {{else}}
             <h4 class="text-muted">Es gibt noch keine Themen in diesem Kurs.</h4>
           {{/userHasPermission}}
