--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -233,13 +233,13 @@
                   <h5 class="text-muted">Was kannst du in einem Kurs machen?</h5>
                   <div class="course-features">
                     <h6>Themen anlegen</h6>
-                    <h6 class="text-muted">
-                      Lege hier die Inhalte deines Unterrichts an.
-                    </h6>
+                    <p class="text-muted">
+                      Lege die Inhalte deines Unterrichts an.
+                    </p>
                     <h6>Aufgaben stellen</h6>
-                    <h6 class="text-muted">
-                      Stelle deinen Kursteilnehmern Aufgaben und sieh dir ihre Abgaben an
-                    </h6>
+                    <p class="text-muted">
+                      Stelle deinen Kursteilnehmern Aufgaben und sieh dir ihre Abgaben an.
+                    </p>
                   </div>
                 </div>
               </div>
