--- a/views/courses/components/tools.hbs
+++ b/views/courses/components/tools.hbs
@@ -25,9 +25,9 @@
           <img src="/images/empty-states/tools.svg" alt="Keine hinzufügten Tools" class="image"/>
           {{#userHasPermission "TOOL_CREATE" }}
             <h4>Füge dem Kurs Tools hinzu</h4>
-            <h6 class="sub-title">
+            <p class="text-muted">
               Füge hier interaktive Tools, wie GeoGebra oder CodeOcean, einem Kurs hinzu.
-            </h6>
+            </p>
           {{else}}
             <h4 class="text-muted">Es gibt noch keine Tools in diesem Kurs.</h4>
           {{/userHasPermission}}
