override default button font family...

--- a/static/styles/lib/bootstrap/scss/_buttons.scss
+++ b/static/styles/lib/bootstrap/scss/_buttons.scss
@@ -6,6 +6,7 @@
 
 .btn {
   display: inline-block;
+  font-family: $headings-font-family;
   font-weight: $btn-font-weight;
   line-height: $btn-line-height;
   text-align: center;
