--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -20,7 +20,7 @@
             {{#content "body"}}
                 <div class="rows-2">
                     <div>
-                        <h1 class="section-title">
+                        <h1 class="h2 section-title">
                             Herzlich Willkommen bei der <span style="white-space: nowrap;">HPI Schul-Cloud!</span>
                         </h1>
                         <p>Das <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit <a href="https://www.mint-ec.de/" target="_blank">MINT-EC</a>, dem nationalen Excellence-Schulnetzwerk von über 300 Schulen bundesweit und unterstützt vom Bundesministerium für Bildung und Forschung die HPI Schul-Cloud. Sie soll die technische Grundlage schaffen, dass Lehrkräfte und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, und zwar so, wie Apps über Smartphones oder Tablets nutzbar sind.</p>
@@ -71,12 +71,12 @@
             {{#content "body"}}
                 <img alt="" width="200px" style="grid-area: a; object-fit: contain; margin: 0 auto" src="/images/login-left.png"/>
                 <div style="grid-area: b; margin: 0 auto;" class="content-width-max">
-                    <h2 class="section-title">Niedrigschwelliger Zugang zu digitalen Unterrichtsinhalten</h2>
+                    <h2 class="h3 section-title">Niedrigschwelliger Zugang zu digitalen Unterrichtsinhalten</h2>
                     <p>Eine moderne Lehr- und Lerninfrastruktur ist unabdingbar, um die digitale Transformation im Bildungssektor zum Erfolg zu führen und Kinder schon im Schulalter optimal auf das Leben in einer zunehmend digitalen Gesellschaft vorzubereiten.</p>
                 </div>
                 <img alt="" width="150px" style="grid-area: c; object-fit: contain; margin: 0 auto" src="/images/login-right.png"/>
                 <div style="grid-area: d; margin: 0 auto;" class="grid-align-right content-width-max">
-                    <h2 class="section-title">Ansatzpunkte der <span style="white-space: nowrap;">HPI Schul-Cloud</span></h2>
+                    <h2 class="h3 section-title">Ansatzpunkte der <span style="white-space: nowrap;">HPI Schul-Cloud</span></h2>
                     <p>Die Nutzung digitaler Medien und Lernmethoden stellt viele Schulen noch vor große Herausforderungen: veraltete Hard- sowie Software im abgeschlossenen Computerraum, fächverbindender Einsatz kaum möglich uvm.</p>
                 </div>
             {{/content}}
@@ -84,7 +84,7 @@
 
         {{#embed "authentication/section" style="accent" class="content-width-max"}}
             {{#content "body"}}
-                <h2 class="section-title center">Die Grundidee der <span style="white-space: nowrap;">HPI Schul-Cloud</span></h2>
+                <h2 class="h3 section-title center">Die Grundidee der <span style="white-space: nowrap;">HPI Schul-Cloud</span></h2>
                 <p>Webbasierte Anwendungen sowie Rechenressourcen und Speichermöglichkeiten per Cloud Computing ermöglichen einen effizienten Zugriff auf zeitgemäße IT-Dienste für einen großen Kreis an Nutzer/innen.</p>
                 <p>Der spontane, bedarfsgerechte Einsatz in jedem beliebigen Unterrichtsfach wird dadurch erleichtert. Die aufwendige Installation von Software auf einzelnen Endgeräten der Nutzer/innen entfällt.</p>
                 <p>Sämtliche Programme und das Benutzerprofil werden via Internet zur Verfügung gestellt. Um Zugang zu den digitalen Inhalten zu erlangen, braucht es lediglich einen Internetzugang, webfähige Anzeige- und Eingabegeräte, einen modernen Webbrowser sowie entsprechende Berechtigungen.</p>
@@ -134,7 +134,7 @@
 
         {{#embed "authentication/section" style="primary" class="content-width-max"}}
             {{#content "body"}}
-                <h2 class="section-title center">Vorteile der <span style="white-space: nowrap;">HPI Schul-Cloud</span></h2>
+                <h2 class="h3 section-title center">Vorteile der <span style="white-space: nowrap;">HPI Schul-Cloud</span></h2>
                 <ul>
                     <li>Zeit- und ortsunabhängiger Zugang zu einem großen Angebot an digitalen Lerninhalten</li>
                     <li>Digitale Bildung jenseits separater Computerräume</li>
@@ -151,7 +151,7 @@
 
         {{#embed "authentication/section" class=""}}
             {{#content "body"}}
-                <h2 class="section-title center"><span style="white-space: nowrap;">HPI Schul-Cloud</span> Blog</h2>
+                <h2 class="h3 section-title center"><span style="white-space: nowrap;">HPI Schul-Cloud</span> Blog</h2>
                     <div class="blog-cards">
                         {{#each blogFeed}}
                             {{> "authentication/blog-card" article=this}}
@@ -166,7 +166,7 @@
         {{#embed "authentication/section" style="accent" class="content-width-max"}}
             {{#content "body"}}
             <div style="text-align: center;">
-                <h2 class="section-title center" style="max-width: 20ch; margin: 0 auto;">
+                <h2 class="h3 section-title center" style="max-width: 20ch; margin: 0 auto;">
                     Alle Neuigkeiten rund um die <span style="white-space: nowrap;">HPI Schul-Cloud</span> bequem in Ihrem Postfach:
                 </h2>
                 <a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank" class="btn btn-outline btn-white-outlined mt-2">
@@ -180,7 +180,7 @@
         {{#embed "authentication/section" class=""}}
             {{#content "body"}}
             <div style="text-align: center;">
-                <h2 class="section-title center">
+                <h2 class="h3 section-title center">
                     Projektdurchführung
                 </h2>
                 <div class="partners row">
