--- a/views/administration/users_registrationcomplete.hbs
+++ b/views/administration/users_registrationcomplete.hbs
@@ -72,7 +72,7 @@
         <div class="printonly">
             <h1>{{fullname}}</h1>
             <p>Du kannst dich nun in der {{@root.theme.short_title}} mit deinem Startpasswort einloggen.
-                Gehe dazu auf <a href="https://schul-cloud.org">https://schul-cloud.org</a>
+                Gehe dazu auf <a href="https://schul-cloud.org"><script>document.write(window.location.origin)</script></a>
                 und logge dich dort mit den folgenden Zugansdaten ein:</p>
         </div>
         <textarea disabled class="printable form-control" style="resize: none; height: 80px">
