--- a/views/administration/users_skipregistration.hbs
+++ b/views/administration/users_skipregistration.hbs
@@ -99,7 +99,7 @@
                 </div>
     </div>
     <div class="row">
-        <div class="modal-footer w-100">
+        <div class="modal-footer w-100"></div>
 
 
             <button class="btn btn-secondary btn-cancel">
