--- a/views/administration/users_registrationcomplete.hbs
+++ b/views/administration/users_registrationcomplete.hbs
@@ -39,7 +39,7 @@
             Mit den folgenden Daten kann sich nun an der {{@root.theme.short_title}} angemeldet werden. <br>
         </p>
         <p class="noprint">
-            <b>Achtung: </b>Du kannst diese Seite nicht erneut aufrufen. Drucke dir also die angezeigten Zugansdaten unbedingt aus oder speichere sie anderweitig. 
+            <b>Achtung: </b>Du kannst diese Seite nicht erneut aufrufen. Drucke dir also die angezeigten Zugangsdaten unbedingt aus oder speichere sie anderweitig. 
             Sollte ein Schüler sein Passwort vergessen, kannst du es nur in der Benutzerverwaltung ändern. 
         </p>
         {{#unless single}}
