--- a/static/styles/homepage/login.scss
+++ b/static/styles/homepage/login.scss
@@ -16,7 +16,11 @@
         margin-bottom: 10px;
         font-size: 1rem;
         padding: .5rem;
-    }
+	}
+	select{
+		width: 100%;
+		padding: .25rem .5rem;
+	}
     .login-providers {
         display:none;
     }
