--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -94,12 +94,11 @@
             Einverständnis manuell erklären
         </h4>
         <p>
-            Du kannst die Einverständniserklärungen für Deine Schüler auch in Papierform von den Eltern erhalten. Sobald Du alle Einverständniserklärungen erhalten
-            hast, kannst Du hier im Namen deiner Klasse das Einverständnis manuell erklären. 
+           Wenn die Einverständniserklärung von allen Schülern und Eltern in Papierform erfolgt ist, kann hier das Einverständnis für die ganze Klasse manuell erklärt werden.
         </p> 
         
             <a href="skipregistration" class="btn btn-primary btn-skip-consent">
-                        <i class="fa fa-exclamation-triangle"></i> Einverständnis manuell für alle Schüler erklären
+                    <i class="fa fa-exclamation-triangle"></i> Einverständnis manuell für alle Schüler erklären
             </a>
         
         
