--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -34,6 +34,9 @@
                                     </span>
                                     <span>Alle Zustimmungen vorhanden</span>    
                                 </div>
+                                <i class="fa fa-step-forward"></i>
+                                Einverständnis manuell erklären
+                                <div>
                             </center>
                         </div>
                     </div>
